--- a/src/views/frame.twig
+++ b/src/views/frame.twig
@@ -11,7 +11,7 @@
 <body class="min-h-screen flex flex-col bg-slate-50">
 <header class="sticky top-0 bg-white drop-shadow-md select-none flex flex-col">
     <div class="px-4 py-2 flex flex-row items-center justify-between">
-        <a href="/" class="p-2">
+        <a href="/" class="noline p-2">
             <div class="font-medium text-xl text-slate-800">Moritz Huber</div>
         </a>
         <div class="flex space-x-2">
@@ -34,7 +34,7 @@
                     </svg>
                 </a>
             {% endif %}
-            <div class="p-2 rounded-xl hover:bg-slate-100 cursor-pointer" id="menu-toggle">
+            <div class="p-2 rounded-xl hover:bg-slate-100 cursor-pointer md:hidden" id="menu-toggle">
                 {# Menu icon #}
                 <svg xmlns="http://www.w3.org/2000/svg" height="24" width="24" class="fill-emerald-600">
                     <path d="M0 0h24v24H0V0z" fill="none"/>
@@ -48,7 +48,7 @@
             document.querySelector('#nav').classList.toggle('active');
         })
     </script>
-    <nav class="overflow-hidden h-0 transition-all duration-300 ease-in-out" id="nav">
+    <nav class="overflow-hidden h-0 transition-all duration-300 ease-in-out md:hidden" id="nav">
         <div class="p-2 flex flex-col space-y-2">
             <a href="/" class="menu-item active">
                 <svg xmlns="http://www.w3.org/2000/svg" height="24" width="24">
@@ -57,11 +57,12 @@
                 </svg>
                 <span>Startseite</span>
             </a>
-            <a href="https://github.com/Huber1" class="menu-item">
+            <a href="https://moritzhuber.de/schule" class="menu-item">
                 <svg xmlns="http://www.w3.org/2000/svg" height="24" width="24">
-                    <path d="M12 2A10 10 0 0 0 2 12c0 4.42 2.87 8.17 6.84 9.5.5.08.66-.23.66-.5v-1.69c-2.77.6-3.36-1.34-3.36-1.34-.46-1.16-1.11-1.47-1.11-1.47-.91-.62.07-.6.07-.6 1 .07 1.53 1.03 1.53 1.03.87 1.52 2.34 1.07 2.91.83.09-.65.35-1.09.63-1.34-2.22-.25-4.55-1.11-4.55-4.92 0-1.11.38-2 1.03-2.71-.1-.25-.45-1.29.1-2.64 0 0 .84-.27 2.75 1.02.79-.22 1.65-.33 2.5-.33.85 0 1.71.11 2.5.33 1.91-1.29 2.75-1.02 2.75-1.02.55 1.35.2 2.39.1 2.64.65.71 1.03 1.6 1.03 2.71 0 3.82-2.34 4.66-4.57 4.91.36.31.69.92.69 1.85V21c0 .27.16.59.67.5C19.14 20.16 22 16.42 22 12A10 10 0 0 0 12 2Z"/>
+                    <path d="M0 0h24v24H0V0z" fill="none"/>
+                    <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 15c-.55 0-1-.45-1-1v-4c0-.55.45-1 1-1s1 .45 1 1v4c0 .55-.45 1-1 1zm1-8h-2V7h2v2z"/>
                 </svg>
-                <span>GitHub</span>
+                <span>Infotafel</span>
             </a>
             <a href="/pgp" class="menu-item">
                 <svg xmlns="http://www.w3.org/2000/svg" height="24" width="24">
@@ -70,11 +71,30 @@
                 </svg>
                 <span>PGP-Schlüssel</span>
             </a>
+            <a href="" class="menu-item">
+                <svg xmlns="http://www.w3.org/2000/svg" height="24" width="24">
+                    <path d="M0 0h24v24H0V0z" fill="none"/>
+                    <path d="M19.35 10.04A7.49 7.49 0 0 0 12 4C9.11 4 6.6 5.64 5.35 8.04A5.994 5.994 0 0 0 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96zM14 13v4h-4v-4H7l4.65-4.65c.2-.2.51-.2.71 0L17 13h-3z"/>
+                </svg>
+                <span>Filedrop</span>
+            </a>
+            <a href="https://github.com/Huber1" class="menu-item">
+                <svg xmlns="http://www.w3.org/2000/svg" height="24" width="24">
+                    <path d="M12 2A10 10 0 0 0 2 12c0 4.42 2.87 8.17 6.84 9.5.5.08.66-.23.66-.5v-1.69c-2.77.6-3.36-1.34-3.36-1.34-.46-1.16-1.11-1.47-1.11-1.47-.91-.62.07-.6.07-.6 1 .07 1.53 1.03 1.53 1.03.87 1.52 2.34 1.07 2.91.83.09-.65.35-1.09.63-1.34-2.22-.25-4.55-1.11-4.55-4.92 0-1.11.38-2 1.03-2.71-.1-.25-.45-1.29.1-2.64 0 0 .84-.27 2.75 1.02.79-.22 1.65-.33 2.5-.33.85 0 1.71.11 2.5.33 1.91-1.29 2.75-1.02 2.75-1.02.55 1.35.2 2.39.1 2.64.65.71 1.03 1.6 1.03 2.71 0 3.82-2.34 4.66-4.57 4.91.36.31.69.92.69 1.85V21c0 .27.16.59.67.5C19.14 20.16 22 16.42 22 12A10 10 0 0 0 12 2Z"/>
+                </svg>
+                <span>GitHub</span>
+            </a>
         </div>
     </nav>
 </header>
-<div class="p-4">
-    {% block content %}{% endblock %}
+<div class="p-4 flex-1">
+    <div class="p-4 bg-white rounded-xl drop-shadow-md text-slate-900 max-w-5xl mx-auto">
+        {% block content %}{% endblock %}
+    </div>
 </div>
+<footer class="p-4 bg-white drop-shadow-md text-center text-slate-800">
+    <a href="/impressum">Impressum</a> | &copy 2020 - {{ 'now' | date('Y') }} by <a href="/" class="noline">Moritz
+        Huber</a>
+</footer>
 </body>
 </html>
