--- a/src/views/404.twig
+++ b/src/views/404.twig
@@ -3,5 +3,8 @@
 {% block title %}Page not found{% endblock %}
 
 {% block content %}
-404 Not found
+
+    <h1>404</h1>
+    <p>Diese Seite existiert nicht, sorry :-(</p>
+
 {% endblock %}
