--- a/src/views/frame.twig
+++ b/src/views/frame.twig
@@ -8,15 +8,15 @@
     <!--suppress HtmlUnknownTarget -->
     <link rel="stylesheet" href="/css/style.css">
 </head>
-<body class="min-h-screen flex flex-col bg-slate-50">
-<header class="sticky top-0 bg-white drop-shadow-md select-none flex flex-col">
+<body class="min-h-screen flex flex-col bg-slate-50 dark:bg-slate-800">
+<header class="sticky top-0 bg-white dark:bg-slate-900 drop-shadow-md select-none flex flex-col">
     <div class="px-4 py-2 flex flex-row items-center justify-between">
         <a href="/" class="noline p-2">
-            <div class="font-medium text-xl text-slate-800">Moritz Huber</div>
+            <div class="font-medium text-xl text-slate-800 dark:text-slate-200">Moritz Huber</div>
         </a>
         <div class="flex space-x-2">
             {% if not auth %}
-                <a href="/login" class="p-2 rounded-xl hover:bg-slate-100" title="Login">
+                <a href="/login" class="p-2 rounded-xl hover:bg-slate-100 dark:hover:bg-slate-700" title="Login">
                     <svg xmlns="http://www.w3.org/2000/svg" height="24" width="24" class="fill-emerald-600">
                         <g fill="none">
                             <path d="M0 0h24v24H0z"/>
@@ -26,7 +26,7 @@
                     </svg>
                 </a>
             {% else %}
-                <a href="/logout" class="p-2 rounded-xl hover:bg-slate-100" title="Logout">
+                <a href="/logout" class="p-2 rounded-xl hover:bg-slate-100 dark:hover:bg-slate-700" title="Logout">
                     <svg xmlns="http://www.w3.org/2000/svg" height="24" width="24" class="fill-emerald-600">
                         <path d="M0 0h24v24H0V0z" fill="none"/>
                         <path d="M5 5h6c.55 0 1-.45 1-1s-.45-1-1-1H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h6c.55 0 1-.45 1-1s-.45-1-1-1H5V5z"/>
@@ -34,7 +34,7 @@
                     </svg>
                 </a>
             {% endif %}
-            <div class="p-2 rounded-xl hover:bg-slate-100 cursor-pointer md:hidden" id="menu-toggle">
+            <div class="p-2 rounded-xl hover:bg-slate-100 dark:hover:bg-slate-700 cursor-pointer md:hidden" id="menu-toggle">
                 {# Menu icon #}
                 <svg xmlns="http://www.w3.org/2000/svg" height="24" width="24" class="fill-emerald-600">
                     <path d="M0 0h24v24H0V0z" fill="none"/>
@@ -46,8 +46,8 @@
 </header>
 
 <div class="p-4 flex-1 flex flex-col md:flex-row md:justify-center md:items-start">
-    <div class="mb-4 md:mb-0 md:mr-4 bg-white rounded-xl drop-shadow-md md:block" id="nav-container">
-        <nav class="m-2">
+    <div class="mb-4 md:mb-0 md:mr-4 bg-white dark:bg-slate-900 rounded-xl drop-shadow-md md:block" id="nav-container">
+        <nav class="m-2 text-slate-800 dark:text-slate-400 font-medium">
             <div class="p-2 flex flex-col space-y-2">
                 <a href="/" class="menu-item {% if tab == "home" %}active{% endif %}">
                     <svg xmlns="http://www.w3.org/2000/svg" height="24" width="24">
@@ -70,7 +70,7 @@
                     </svg>
                     <span>PGP-Schlüssel</span>
                 </a>
-                <a href="" class="menu-item">
+                <a href="https://cloud.moritzhuber.de/s/upload-moritz" class="menu-item">
                     <svg xmlns="http://www.w3.org/2000/svg" height="24" width="24">
                         <path d="M0 0h24v24H0V0z" fill="none"/>
                         <path d="M19.35 10.04A7.49 7.49 0 0 0 12 4C9.11 4 6.6 5.64 5.35 8.04A5.994 5.994 0 0 0 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96zM14 13v4h-4v-4H7l4.65-4.65c.2-.2.51-.2.71 0L17 13h-3z"/>
@@ -92,12 +92,12 @@
             document.querySelector('#nav-container').classList.toggle('hidden');
         })
     </script>
-    <div class="p-4 bg-white rounded-xl drop-shadow-md text-slate-900 max-w-5xl flex-1">
+    <div class="p-4 bg-white dark:bg-slate-900 rounded-xl drop-shadow-md text-slate-900 dark:text-slate-400 max-w-5xl flex-1">
         {% block content %}{% endblock %}
     </div>
 </div>
 
-<footer class="p-4 bg-white drop-shadow-md text-center text-slate-800">
+<footer class="p-4 bg-white dark:bg-slate-900 dark:text-slate-400 drop-shadow-md text-center text-slate-800">
     <a href="/impressum">Impressum</a> | &copy 2020 - {{ 'now' | date('Y') }} by <a href="/" class="noline">Moritz
         Huber</a>
 </footer>
