--- a/src/views/index.twig
+++ b/src/views/index.twig
@@ -1,6 +1,6 @@
 {% extends "frame.twig" %}
 
-{% block title %}Greeting{% endblock %}
+{% block title %}Moritz Huber{% endblock %}
 
 {% block content %}
 Hallo Welt
