--- a/src/views/frame.twig
+++ b/src/views/frame.twig
@@ -15,25 +15,25 @@
             <div class="font-medium text-xl text-slate-800 dark:text-slate-200">Moritz Huber</div>
         </a>
         <div class="flex space-x-2">
-            {% if not auth %}
-                <a href="/login" class="p-2 rounded-xl hover:bg-slate-100 dark:hover:bg-slate-700" title="Login">
-                    <svg xmlns="http://www.w3.org/2000/svg" height="24" width="24" class="fill-emerald-600">
-                        <g fill="none">
-                            <path d="M0 0h24v24H0z"/>
-                            <path d="M0 0h24v24H0z"/>
-                        </g>
-                        <path d="M10.3 7.7a.984.984 0 0 0 0 1.4l1.9 1.9H3c-.55 0-1 .45-1 1s.45 1 1 1h9.2l-1.9 1.9a.984.984 0 0 0 0 1.4c.39.39 1.01.39 1.4 0l3.59-3.59a.996.996 0 0 0 0-1.41L11.7 7.7a.984.984 0 0 0-1.4 0zM20 19h-7c-.55 0-1 .45-1 1s.45 1 1 1h7c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2h-7c-.55 0-1 .45-1 1s.45 1 1 1h7v14z"/>
-                    </svg>
-                </a>
-            {% else %}
-                <a href="/logout" class="p-2 rounded-xl hover:bg-slate-100 dark:hover:bg-slate-700" title="Logout">
-                    <svg xmlns="http://www.w3.org/2000/svg" height="24" width="24" class="fill-emerald-600">
-                        <path d="M0 0h24v24H0V0z" fill="none"/>
-                        <path d="M5 5h6c.55 0 1-.45 1-1s-.45-1-1-1H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h6c.55 0 1-.45 1-1s-.45-1-1-1H5V5z"/>
-                        <path d="m20.65 11.65-2.79-2.79a.501.501 0 0 0-.86.35V11h-7c-.55 0-1 .45-1 1s.45 1 1 1h7v1.79c0 .45.54.67.85.35l2.79-2.79c.2-.19.2-.51.01-.7z"/>
-                    </svg>
-                </a>
-            {% endif %}
+{#            {% if not auth %}#}
+{#                <a href="/login" class="p-2 rounded-xl hover:bg-slate-100 dark:hover:bg-slate-700" title="Login">#}
+{#                    <svg xmlns="http://www.w3.org/2000/svg" height="24" width="24" class="fill-emerald-600">#}
+{#                        <g fill="none">#}
+{#                            <path d="M0 0h24v24H0z"/>#}
+{#                            <path d="M0 0h24v24H0z"/>#}
+{#                        </g>#}
+{#                        <path d="M10.3 7.7a.984.984 0 0 0 0 1.4l1.9 1.9H3c-.55 0-1 .45-1 1s.45 1 1 1h9.2l-1.9 1.9a.984.984 0 0 0 0 1.4c.39.39 1.01.39 1.4 0l3.59-3.59a.996.996 0 0 0 0-1.41L11.7 7.7a.984.984 0 0 0-1.4 0zM20 19h-7c-.55 0-1 .45-1 1s.45 1 1 1h7c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2h-7c-.55 0-1 .45-1 1s.45 1 1 1h7v14z"/>#}
+{#                    </svg>#}
+{#                </a>#}
+{#            {% else %}#}
+{#                <a href="/logout" class="p-2 rounded-xl hover:bg-slate-100 dark:hover:bg-slate-700" title="Logout">#}
+{#                    <svg xmlns="http://www.w3.org/2000/svg" height="24" width="24" class="fill-emerald-600">#}
+{#                        <path d="M0 0h24v24H0V0z" fill="none"/>#}
+{#                        <path d="M5 5h6c.55 0 1-.45 1-1s-.45-1-1-1H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h6c.55 0 1-.45 1-1s-.45-1-1-1H5V5z"/>#}
+{#                        <path d="m20.65 11.65-2.79-2.79a.501.501 0 0 0-.86.35V11h-7c-.55 0-1 .45-1 1s.45 1 1 1h7v1.79c0 .45.54.67.85.35l2.79-2.79c.2-.19.2-.51.01-.7z"/>#}
+{#                    </svg>#}
+{#                </a>#}
+{#            {% endif %}#}
             <div class="p-2 rounded-xl hover:bg-slate-100 dark:hover:bg-slate-700 cursor-pointer md:hidden"
                  id="menu-toggle">
                 {# Menu icon #}
