fix firefox not correctly displaying link underline

--- a/src/style.css
+++ b/src/style.css
@@ -27,7 +27,7 @@
         @apply bg-[length:0_2px]
     }
 
-    a.noline, a:has(svg) {
+    a.noline {
         @apply bg-none text-inherit
     }
 
