--- a/src/views/frame.twig
+++ b/src/views/frame.twig
@@ -50,35 +50,35 @@
     <div class="mb-4 md:mb-0 md:mr-4 bg-white dark:bg-slate-900 rounded-xl drop-shadow-md md:block" id="nav-container">
         <nav class="m-2 text-slate-800 dark:text-slate-400 font-medium">
             <div class="p-2 flex flex-col space-y-2">
-                <a href="/" class="menu-item {% if tab == "home" %}active{% endif %}">
+                <a href="/" class="menu-item noline {% if tab == "home" %}active{% endif %}">
                     <svg xmlns="http://www.w3.org/2000/svg" height="24" width="24">
                         <path d="M0 0h24v24H0V0z" fill="none"/>
                         <path d="M10 19v-5h4v5c0 .55.45 1 1 1h3c.55 0 1-.45 1-1v-7h1.7c.46 0 .68-.57.33-.87L12.67 3.6c-.38-.34-.96-.34-1.34 0l-8.36 7.53c-.34.3-.13.87.33.87H5v7c0 .55.45 1 1 1h3c.55 0 1-.45 1-1z"/>
                     </svg>
                     <span>Startseite</span>
                 </a>
-                <a href="https://schule.moritzhuber.de" class="menu-item">
+                <a href="https://schule.moritzhuber.de" class="menu-item noline">
                     <svg xmlns="http://www.w3.org/2000/svg" height="24" width="24">
                         <path d="M0 0h24v24H0V0z" fill="none"/>
                         <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 15c-.55 0-1-.45-1-1v-4c0-.55.45-1 1-1s1 .45 1 1v4c0 .55-.45 1-1 1zm1-8h-2V7h2v2z"/>
                     </svg>
                     <span>Infotafel</span>
                 </a>
-                <a href="/pgp" class="menu-item {% if tab == "pgp" %}active{% endif %}">
+                <a href="/pgp" class="menu-item noline {% if tab == "pgp" %}active{% endif %}">
                     <svg xmlns="http://www.w3.org/2000/svg" height="24" width="24">
                         <path d="M0 0h24v24H0V0z" fill="none"/>
                         <path d="M12.65 10a5.998 5.998 0 0 0-6.88-3.88c-2.29.46-4.15 2.29-4.63 4.58A6.006 6.006 0 0 0 7 18a5.99 5.99 0 0 0 5.65-4H17v2c0 1.1.9 2 2 2s2-.9 2-2v-2c1.1 0 2-.9 2-2s-.9-2-2-2h-8.35zM7 14c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2z"/>
                     </svg>
                     <span>PGP-Schlüssel</span>
                 </a>
-                <a href="https://cloud.moritzhuber.de/s/upload-moritz" class="menu-item">
+                <a href="https://cloud.moritzhuber.de/s/upload-moritz" class="menu-item noline">
                     <svg xmlns="http://www.w3.org/2000/svg" height="24" width="24">
                         <path d="M0 0h24v24H0V0z" fill="none"/>
                         <path d="M19.35 10.04A7.49 7.49 0 0 0 12 4C9.11 4 6.6 5.64 5.35 8.04A5.994 5.994 0 0 0 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96zM14 13v4h-4v-4H7l4.65-4.65c.2-.2.51-.2.71 0L17 13h-3z"/>
                     </svg>
                     <span>Filedrop</span>
                 </a>
-                <a href="https://github.com/Huber1" class="menu-item">
+                <a href="https://github.com/Huber1" class="menu-item noline">
                     <svg xmlns="http://www.w3.org/2000/svg" height="24" width="24">
                         <path d="M12 2A10 10 0 0 0 2 12c0 4.42 2.87 8.17 6.84 9.5.5.08.66-.23.66-.5v-1.69c-2.77.6-3.36-1.34-3.36-1.34-.46-1.16-1.11-1.47-1.11-1.47-.91-.62.07-.6.07-.6 1 .07 1.53 1.03 1.53 1.03.87 1.52 2.34 1.07 2.91.83.09-.65.35-1.09.63-1.34-2.22-.25-4.55-1.11-4.55-4.92 0-1.11.38-2 1.03-2.71-.1-.25-.45-1.29.1-2.64 0 0 .84-.27 2.75 1.02.79-.22 1.65-.33 2.5-.33.85 0 1.71.11 2.5.33 1.91-1.29 2.75-1.02 2.75-1.02.55 1.35.2 2.39.1 2.64.65.71 1.03 1.6 1.03 2.71 0 3.82-2.34 4.66-4.57 4.91.36.31.69.92.69 1.85V21c0 .27.16.59.67.5C19.14 20.16 22 16.42 22 12A10 10 0 0 0 12 2Z"/>
                     </svg>
