startseite hat nun bissl inhalt

--- a/src/views/index.twig
+++ b/src/views/index.twig
@@ -3,5 +3,19 @@
 {% block title %}Moritz Huber{% endblock %}
 
 {% block content %}
-Hallo Welt
+    <h2>Hallo Welt</h2>
+    <p>
+        ich bin Moritz Huber, ab Oktober Physikstudent an der TU-München
+    </p>
+    <p class="mt-6">
+        Mein bisher größtes Projekt ist die <a href="https://schule.moritzhuber.de">Infotafel</a>.<br>
+        Diese zeigt den tagesaktuellen Stundenplan sowie anstehende Termine an.<br>
+        Da ich mit der Schule fertig bin, steht momentan kaum was drin, aber <a
+                href="https://web.archive.org/web/20220204163730/https://moritzhuber.de/schule/" target="_blank">archive.org hat eine
+            gut gefüllte Version vom Februar</a>.
+    </p>
+    <p>
+        Ich arbeite aktuell an einer aktualisierten Version zusammen mit einem Freund. Diese soll deutlich mehr Funktionen haben, sicherer und übersichtlicher sein.<br>
+        Sobald wir damit fertig sind, werden wir den Code auf meiner GitHub-Seite veröffentlichen
+    </p>
 {% endblock %}
