--- a/src/views/impressum.twig
+++ b/src/views/impressum.twig
@@ -8,17 +8,12 @@
 
     <h2>Angaben gem&auml;&szlig; &sect; 5 TMG</h2>
     <p>Moritz Huber<br/>
-        Walliser Stra&szlig;e 106<br/>
-        81475 M&uuml;nchen</p>
-
-    <h2>Kontakt</h2>
-    <p>Telefon: +49 15156533121<br/>
-        E-Mail: deutschlandreguliertdasinternetkaputt@moritzhuber.de</p>
+        E-Mail: <span class="email_replace">[Mach JavaScript an um die mail zu sehen]</span><br/>
+        Telefon: <span class="tel_replace">[Mach JavaScript an um die Nummer zu sehen]</span>
+    </p>
 
     <h2>Redaktionell Verantwortlicher</h2>
     <p>Moritz Huber<br/>
-        Walliser Stra&szlig;e 106<br/>
-        81475 M&uuml;nchen</p>
 
     <h3>Haftung f&uuml;r Inhalte</h3>
     <p>Als Diensteanbieter sind wir gem&auml;&szlig; &sect; 7 Abs.1 TMG f&uuml;r eigene Inhalte auf diesen Seiten nach
@@ -113,11 +108,9 @@
     <h3>Hinweis zur verantwortlichen Stelle</h3>
     <p>Die verantwortliche Stelle f&uuml;r die Datenverarbeitung auf dieser Website ist:</p>
     <p>Moritz Huber<br/>
-        Walliser Stra&szlig;e 106,<br/>
-        81475 M&uuml;nchen</p>
-
-    <p>Telefon: +4915156533121<br/>
-        E-Mail: webmaster@moritzhuber.de</p>
+        E-Mail: <span class="email_replace">[Mach JavaScript an um die mail zu sehen]</span><br/>
+        Telefon: <span class="tel_replace">[Mach JavaScript an um die Nummer zu sehen]</span>
+    </p>
     <p>Verantwortliche Stelle ist die nat&uuml;rliche oder juristische Person, die allein oder gemeinsam mit anderen
         &uuml;ber die Zwecke und Mittel der Verarbeitung von personenbezogenen Daten (z.&nbsp;B. Namen, E-Mail-Adressen
         o. &Auml;.) entscheidet.</p>
@@ -197,5 +190,14 @@
         juristischen Person oder aus Gr&uuml;nden eines wichtigen &ouml;ffentlichen Interesses der Europ&auml;ischen
         Union oder eines Mitgliedstaats verarbeitet werden.</p>
     <p>Quelle: <a href="https://www.e-recht24.de">eRecht24</a></p>
-
+    <script>
+        setTimeout(() => {
+            document.querySelectorAll(".email_replace").forEach(item => {
+                item.replaceWith("deutschlandreguliertdasinternetkaputt@moritzhuber.de")
+            })
+            document.querySelectorAll(".tel_replace").forEach(item => {
+                item.replaceWith("015156533121")
+            })
+        }, 200);
+    </script>
 {% endblock %}
