index.twig ab -> seit

--- a/src/views/index.twig
+++ b/src/views/index.twig
@@ -5,7 +5,7 @@
 {% block content %}
     <h2>Hallo Welt</h2>
     <p>
-        ich bin Moritz Huber, ab Oktober Physikstudent an der TU-München
+        ich bin Moritz Huber, seit Oktober Physikstudent an der TU-München
     </p>
     <p class="mt-6">
         Mein bisher größtes Projekt ist die <a href="https://schule.moritzhuber.de">Infotafel</a>.<br>
