--- a/src/style.css
+++ b/src/style.css
@@ -43,9 +43,12 @@
         @apply font-medium text-xl mb-2 dark:text-slate-200
     }
 
+    h3 {
+        @apply font-medium text-lg mb-1 dark:text-slate-200
+    }
+
     p {
         @apply mt-2 text-lg
-
     }
 
     code {
