--- a/src/views/frame.twig
+++ b/src/views/frame.twig
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="de">
 <head>
     <meta charset="UTF-8">
@@ -58,12 +59,15 @@
                         </svg>
                         <span>Startseite</span>
                     </a>
-                    <a href="https://schule.moritzhuber.de" class="menu-item noline">
-                        <svg xmlns="http://www.w3.org/2000/svg" height="24" width="24">
-                            <path d="M0 0h24v24H0V0z" fill="none"/>
-                            <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 15c-.55 0-1-.45-1-1v-4c0-.55.45-1 1-1s1 .45 1 1v4c0 .55-.45 1-1 1zm1-8h-2V7h2v2z"/>
+                    <a href="/news" class="menu-item noline {% if tab == "news" %}active{% endif %}">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24">
+                            <g fill="none">
+                                <path d="M0 0h24v24H0z"/>
+                                <path d="M0 0h24v24H0z"/>
+                            </g>
+                            <path d="m21.15 3.85-.82.82-.95-.96c-.39-.39-1.02-.39-1.42 0l-.96.96-.96-.96c-.39-.39-1.03-.39-1.42 0l-.95.96-.96-.96a.996.996 0 0 0-1.41 0l-.96.96-.96-.96c-.39-.39-1.02-.39-1.42 0L7 4.67l-.96-.96c-.39-.39-1.03-.39-1.42 0l-.95.96-.82-.82a.5.5 0 0 0-.85.36V19c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V4.21a.5.5 0 0 0-.85-.36zM11 19H4v-6h7v6zm9 0h-7v-2h7v2zm0-4h-7v-2h7v2zm0-4H4V8h16v3z"/>
                         </svg>
-                        <span>Infotafel</span>
+                        <span>Aktuelles</span>
                     </a>
                     <a href="/pgp" class="menu-item noline {% if tab == "pgp" %}active{% endif %}">
                         <svg xmlns="http://www.w3.org/2000/svg" height="24" width="24">
@@ -71,6 +75,13 @@
                             <path d="M12.65 10a5.998 5.998 0 0 0-6.88-3.88c-2.29.46-4.15 2.29-4.63 4.58A6.006 6.006 0 0 0 7 18a5.99 5.99 0 0 0 5.65-4H17v2c0 1.1.9 2 2 2s2-.9 2-2v-2c1.1 0 2-.9 2-2s-.9-2-2-2h-8.35zM7 14c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2z"/>
                         </svg>
                         <span>PGP-Schlüssel</span>
+                    </a>
+                    <a href="https://schule.moritzhuber.de" class="menu-item noline">
+                        <svg xmlns="http://www.w3.org/2000/svg" height="24" width="24">
+                            <path d="M0 0h24v24H0V0z" fill="none"/>
+                            <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 15c-.55 0-1-.45-1-1v-4c0-.55.45-1 1-1s1 .45 1 1v4c0 .55-.45 1-1 1zm1-8h-2V7h2v2z"/>
+                        </svg>
+                        <span>Infotafel</span>
                     </a>
                     <a href="https://cloud.moritzhuber.de/s/upload-moritz" class="menu-item noline">
                         <svg xmlns="http://www.w3.org/2000/svg" height="24" width="24">
