--- a/src/views/news.twig
+++ b/src/views/news.twig
@@ -6,10 +6,13 @@
     <h2>Aktuelles</h2>
     <div class="mt-4">
         {% for item in news %}
-            <article class="p-2 text-lg mt-2 rounded-xl bg-emerald-50 dark:bg-slate-800 border-2 border-emerald-100 dark:border dark:border-slate-700">
-                {{ item.date }}
+            <article
+                    class="p-2 text-lg mt-2 rounded-xl bg-emerald-50 dark:bg-slate-800 border-2 border-emerald-100 dark:border dark:border-slate-700">
+                <div class="text-base text-emerald-600">{{ item.date }}</div>
                 {{ item.content|raw }}
             </article>
+        {% else %}
+            Keine Einträge, schau wann anders nochmal vorbei
         {% endfor %}
     </div>
 {% endblock %}
