--- a/src/views/frame.twig
+++ b/src/views/frame.twig
@@ -59,7 +59,7 @@
                         </svg>
                         <span>Startseite</span>
                     </a>
-                    <a href="/news" class="menu-item noline {% if tab == "news" %}active{% endif %}">
+                    <a href="/aktuelles" class="menu-item noline {% if tab == "aktuelles" %}active{% endif %}">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24">
                             <g fill="none">
                                 <path d="M0 0h24v24H0z"/>
