--- a/src/views/pgp.twig
+++ b/src/views/pgp.twig
@@ -6,16 +6,27 @@
     <h2>PGP Key</h2>
     <p>Hier kannst du meinen öffentlichen PGP-Schlüssel herunterladen, um mir damit mails (oder andere Dinge) zu
         verschlüsseln und zu signieren</p>
-    <p class="mt-4 flex flex-col space-y-1 p-2 rounded-xl bg-emerald-50 dark:bg-slate-800 border-2 border-emerald-100 dark:border dark:border-slate-700">
-        <span><a href="mailto:{{ email }}">{{ email }}</a></span>
-        <span><a href="/pgp/key/{{ fingerprint|replace({' ': ''}) }}"
-                 target="_blank" download="{{ email }}.asc">Download</a></span>
-        <code class="fingerprint break-all w-fit cursor-pointer select-all" title="Fingerprint">{{ fingerprint }}</code>
-    </p>
+    <div class="mt-4 flex flex-col space-y-4 p-2 rounded-xl bg-emerald-50 dark:bg-slate-800 border-2 border-emerald-100 dark:border dark:border-slate-700">
+        <div class="flex flex-col lg:flex-row lg:space-x-2">
+            <span>E-Mail:</span>
+            <span><a href="mailto:{{ email }}">{{ email }}</a></span>
+        </div>
+        <div class="flex flex-col md:flex-row md:space-x-2">
+            <span>
+                <a href="/pgp/key/{{ fingerprint|replace({' ': ''}) }}" target="_blank" download="{{ email }}.asc">Download</a>
+            </span>
+        </div>
+        <div class="flex flex-col lg:flex-row lg:space-x-2">
+            <span class="mb-2 lg:mb-0">Fingerprint:</span>
+            <span>
+                <code class="fingerprint break-all w-fit cursor-pointer select-all"
+                      title="Fingerprint">{{ fingerprint }}</code>
+            </span>
+        </div>
+    </div>
     {% if default %}
         <p>Solltest du den Schlüssel für eine andere E-Mail-Adresse suchen, dann findest du den Link dazu in jeder
-            E-Mail
-            von mir ganz unten</p>
+            E-Mail von mir ganz unten</p>
     {% endif %}
 
     <script>
