homepage text geändert

--- a/src/views/index.twig
+++ b/src/views/index.twig
@@ -5,17 +5,12 @@
 {% block content %}
     <h2>Hallo Welt</h2>
     <p>
-        ich bin Moritz Huber, seit Oktober Physikstudent an der TU-München
-    </p>
-    <p class="mt-6">
-        Mein bisher größtes Projekt ist die <a href="https://schule.moritzhuber.de">Infotafel</a>.<br>
-        Diese zeigt den tagesaktuellen Stundenplan sowie anstehende Termine an.<br>
-        Da ich mit der Schule fertig bin, steht momentan kaum was drin, aber <a
-                href="https://web.archive.org/web/20220204163730/https://moritzhuber.de/schule/" target="_blank">archive.org hat eine
-            gut gefüllte Version vom Februar</a>.
+        ich bin Moritz Huber, seit Oktober Physikstudent an der TU-München und Werkstudent bei <a
+                href="https://adabay.rocks" target="_blank">Adabay</a>.
     </p>
     <p>
-        Ich arbeite aktuell an einer aktualisierten Version zusammen mit einem Freund. Diese soll deutlich mehr Funktionen haben, sicherer und übersichtlicher sein.<br>
-        Sobald wir damit fertig sind, werden wir den Code auf meiner GitHub-Seite veröffentlichen
+        Wenn du dich für meine Projekte interessierst, schau gerne bei meinem
+        <a href="https://github.com/Huber1" target="_blank">Github</a> oder meiner neuen
+        <a href="https://git.huber.cloud/Moritz" target="_blank">Gitea Instanz</a> vorbei
     </p>
 {% endblock %}
