pgp key link nofollow

--- a/src/views/pgp.twig
+++ b/src/views/pgp.twig
@@ -13,7 +13,7 @@
         </div>
         <div class="flex flex-col md:flex-row md:space-x-2">
             <span>
-                <a href="/pgp/key/{{ fingerprint|replace({' ': ''}) }}" target="_blank" download="{{ email }}.asc">Download</a>
+                <a href="/pgp/key/{{ fingerprint|replace({' ': ''}) }}" target="_blank" download="{{ email }}.asc" rel="nofollow">Download</a>
             </span>
         </div>
         <div class="flex flex-col lg:flex-row lg:space-x-2">
