--- a/src/views/index.twig
+++ b/src/views/index.twig
@@ -5,7 +5,7 @@
 {% block content %}
     <h2>Hallo Welt</h2>
     <p>
-        ich bin Moritz Huber, seit Oktober Physikstudent an der TU-München und Werkstudent bei <a
+        Ich bin Moritz Huber, Elektrotechnikstudent an der Hochschule München und Werkstudent bei <a
                 href="https://adabay.rocks" target="_blank">Adabay</a>.
     </p>
     <p>
