--- a/src/views/index.twig
+++ b/src/views/index.twig
@@ -6,7 +6,7 @@
     <h2>Hallo Welt</h2>
     <p>
         Ich bin Moritz Huber, Elektrotechnikstudent an der Hochschule München und Werkstudent bei <a
-                href="https://adabay.rocks" target="_blank">Adabay</a>.
+                href="https://adabay.rocks" target="_blank" rel="nofollow noreferrer" referrerpolicy="no-referrer">Adabay</a>.
     </p>
     <p>
         Wenn du dich für meine Projekte interessierst, schau gerne bei meinem
