--- a/src/views/pgp.twig
+++ b/src/views/pgp.twig
@@ -13,7 +13,12 @@
         </div>
         <div class="flex flex-col md:flex-row md:space-x-2">
             <span>
-                <a href="/pgp/key/{{ fingerprint|replace({' ': ''}) }}" target="_blank" download="{{ email }}.asc" rel="nofollow">Download</a>
+                <a href="/pgp/key/{{ fingerprint|replace({' ': ''}) }}"
+                   target="_blank"
+                   download="{{ email }}.asc"
+                   rel="nofollow noreferrer"
+                   referrerpolicy="no-referrer"
+                >Download</a>
             </span>
         </div>
         <div class="flex flex-col lg:flex-row lg:space-x-2">
