--- a/src/views/frame.twig
+++ b/src/views/frame.twig
@@ -8,6 +8,7 @@
     <title>{% block title %}{% endblock %}</title>
     <!--suppress HtmlUnknownTarget -->
     <link rel="stylesheet" href="/css/style.css">
+    <meta name="description" content="Personal Website of Moritz Huber">
 </head>
 <body class="h-screen flex flex-col bg-slate-50 dark:bg-slate-800">
 <header class="sticky top-0 bg-white dark:bg-slate-900 drop-shadow-md select-none flex flex-col z-50">
