--- a/src/views/impressum.twig
+++ b/src/views/impressum.twig
@@ -189,7 +189,7 @@
         Verteidigung von Rechtsanspr&uuml;chen oder zum Schutz der Rechte einer anderen nat&uuml;rlichen oder
         juristischen Person oder aus Gr&uuml;nden eines wichtigen &ouml;ffentlichen Interesses der Europ&auml;ischen
         Union oder eines Mitgliedstaats verarbeitet werden.</p>
-    <p>Quelle: <a href="https://www.e-recht24.de">eRecht24</a></p>
+    <p>Quelle: <a rel="nofollow noreferrer" href="https://www.e-recht24.de">eRecht24</a></p>
     <script>
         setTimeout(() => {
             document.querySelectorAll(".email_replace").forEach(item => {
