--- a/src/views/index.twig
+++ b/src/views/index.twig
@@ -10,7 +10,7 @@
     </p>
     <p>
         Wenn du dich für meine Projekte interessierst, schau gerne bei meinem
-        <a href="https://github.com/Huber1" target="_blank">Github</a> oder meiner
-        <a href="https://git.huber.cloud/Moritz" target="_blank">Forgejo (Gitea) Instanz</a> vorbei
+        <a href="https://github.com/Huber1" target="_blank" rel="noreferrer">Github</a> oder meiner
+        <a href="https://git.huber.cloud/Moritz" target="_blank" rel="noreferrer">Forgejo (Gitea) Instanz</a> vorbei
     </p>
 {% endblock %}
